# CerebroGate

./: .env.example  .gitignore  Cargo.toml  commit_msg.txt  diff.txt  元数据接口.txt
.lancedb/file_meta_e585b6e4bb96e69687e4bbb6.lance/_transactions/: 0-45d495b4-7963-4226-a705-75071c813fe7.txn
.lancedb/file_meta_e585b6e4bb96e69687e4bbb6.lance/_versions/: 1.manifest
.lancedb/file_meta_e9a1b9e79baee69687e4bbb6.lance/_transactions/: 0-21ad2578-e04d-4f0a-b042-96cc5ff9d76d.txn
.lancedb/file_meta_e9a1b9e79baee69687e4bbb6.lance/_versions/: 1.manifest
.lancedb/files_e585b6e4bb96e69687e4bbb6.lance/_transactions/: 0-1b69bde4-7148-427a-b228-a66aecf741b0.txn
.lancedb/files_e585b6e4bb96e69687e4bbb6.lance/_versions/: 1.manifest
.lancedb/files_e9a1b9e79baee69687e4bbb6.lance/_transactions/: 0-3f97acf9-dc9c-4a56-bc25-bd1d2a74fcbc.txn
.lancedb/files_e9a1b9e79baee69687e4bbb6.lance/_versions/: 1.manifest
.lancedb/items.lance/_transactions/: 0-3b27ff86-49b4-4c82-81f6-1fd3fb0e8758.txn
.lancedb/items.lance/_versions/: 1.manifest
src/: chat.rs  chunker.rs  embedding.rs  handler.rs  main.rs  sensitive.rs  sensitive_service.rs  upload.rs
src/extractor/: csv_ext.rs  docx.rs  excel.rs  mod.rs  pdf.rs  plaintext.rs
