[package]
name = "cerebro_gate"
version = "0.1.0"
edition = "2024"
default-run = "cerebro_gate"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lancedb = "0.15"
arrow-array = "53"
arrow-schema = "53"
arrow-data = "53"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"

# 文件解析
pdf-extract = "0.7"
calamine = "0.26"
csv = "1"
zip = "2"
quick-xml = "0.37"
pdfium-render = "0.8.23"
ocrs = "0.12.2"
image = "0.25"
rten = "0.24"
rten-tensor = "0.24"
rten-imageproc = "0.24"

# HTTP 客户端（调用 Embedding API）
reqwest = { version = "0.12", features = ["json"] }

# 工具
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
fastembed = "5.13.0"
urlencoding = "2"
base64 = "0.22"
